Same behaviour in browser dialog and main activity

--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -32,7 +32,7 @@
     <string name="action_about">Acerca de</string>
     <string name="action_delete">Eliminar</string>
     <string name="discard">Descartar</string>
-    <string name="ok">Ok</string>
+    <string name="ok">OK</string>
     <string name="copy_to_clipboard">Copiar al portapapeles</string>
     <string name="cancel">Cancelar</string>
     <string name="add">Añadir</string>
