--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -31,7 +31,7 @@
     <string name="action_about">About</string>
     <string name="action_delete">Delete</string>
     <string name="discard">Discard</string>
-    <string name="ok">Ok</string>
+    <string name="ok">OK</string>
     <string name="copy_to_clipboard">Copy to clipboard</string>
     <string name="cancel">Cancel</string>
     <string name="add">Add</string>
