Streamlined tutorial: splash, intro, setup
- Warning: not feature complete yet (default profile creation in
  particular is missing).
- New tutorial pages using standalones classes: TutorialIntroFragment,
  TutorialSetupFragment.
- Intro is meant as a quick introduction on how to use the app,
  including a simple animation.
- Setup is meant to replace the default profile dialog. That is,
  default profile creation will be handled in the last page of the
  tutorial.
- TutorialActivity has been short-circuited to show only these three
  pages. However, no further code has been removed, and some
  functionality is still missing.

--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -109,6 +109,21 @@
         Predeterminado
     </item>
 
+    <string name="tutorial_intro_header">Contraseñas más seguras</string>
+    <string name="tutorial_intro_content">Cuando quieras generar una
+        contraseña para un sitio web tendrás que introducir tu clave
+        maestra, que sólo tu conoces. Hash my pass generará una
+        contraseña única para el sitio.</string>
+    <string name="tutorial_setup_header">Ya falta poco</string>
+    <string name="tutorial_setup_content_1">Necesitarás un par de cosas
+        antes de empezar:</string>
+    <string name="tutorial_setup_content_2"><ul><li>Una contraseña maestra. ¡No la
+        escribas ahora! Tan sólo elige una y recuérdala.</li></ul></string>
+    <string name="tutorial_setup_content_3"><ul><li>Una clave privada. Esta
+        clave se guardará en tu dispositivo.</li></ul></string>
+    <string name="tutorial_setup_sample_master_key">p.ej. "gato lavadora radio"</string>
+    <string name="tutorial_setup_sample_private_key">p.ej. "ASDF-QWER-DFGH"</string>
+
     <!-- Notices -->
     <string name="no_tags">¡No tienes sitios web!</string>
     <string name="copied_to_clipboard">Contraseña del sitio web copiada al
