--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -2,27 +2,27 @@
 <!--
     * Copyright 2014 Red Dye No. 2
     *
-    * This file is part of Hash My pass.
+    * This file is part of Twik.
     *
-    * Hash my pass is free software: you can redistribute it and/or modify
+    * Twik is free software: you can redistribute it and/or modify
     * it under the terms of the GNU General Public License as published by
     * the Free Software Foundation, either version 3 of the License, or
     * (at your option) any later version.
     *
-    * Hash my pass is distributed in the hope that it will be useful,
+    * Twik is distributed in the hope that it will be useful,
     * but WITHOUT ANY WARRANTY; without even the implied warranty of
     * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
     * GNU General Public License for more details.
     *
     * You should have received a copy of the GNU General Public License
-    * along with Hash my pass.  If not, see <http://www.gnu.org/licenses/>.
+    * along with Twik.  If not, see <http://www.gnu.org/licenses/>.
     *
     -->
 
 <resources>
 
     <!-- Titles -->
-    <string name="app_name">Hash my pass</string>
+    <string name="app_name">Twik</string>
 
     <!-- Actions -->
     <string name="action_settings">Ajustes</string>
@@ -66,7 +66,7 @@
     <string name="tutorial_intro_header">Contraseñas más seguras</string>
     <string name="tutorial_intro_content">Cuando quieras generar una
         contraseña para un sitio web tendrás que introducir tu clave
-        maestra, que sólo tu conoces. Hash my pass generará una
+        maestra, que sólo tu conoces. Twik generará una
         contraseña única para el sitio.</string>
     <string name="tutorial_setup_header">Ya falta poco</string>
     <string name="tutorial_setup_content_1">Necesitarás un par de cosas
@@ -115,11 +115,11 @@
 
     <!-- About Dialog -->
     <string name="about_body"><![CDATA[
-        <b>Hash my pass</b><br/>
+        <b>Twik</b><br/>
         Versión 1.2.0 beta1<br/>
         Copyright \u00A9 2014 Red Dye No. 2
         <br/><br/>
-        <b>Hash my pass</b> es una aplicación que hace más fácil generar
+        <b>Twik</b> es una aplicación que hace más fácil generar
         contraseñas seguras y diferentes para cada sitio web.
         <br/><br/>
         Está basado en el mecanismo de generación de contraseñas de Password
@@ -130,11 +130,11 @@
         <br/><br/>
 
         <b>Licencia</b><br/>
-        Hash my pass is free software: you can redistribute it and/or modify
+        Twik is free software: you can redistribute it and/or modify
         it under the terms of the GNU General Public License as published by
         the Free Software Foundation, either version 3 of the License, or
         (at your option) any later version.<br/><br/>
-        Hash my pass is distributed in the hope that it will be useful,
+        Twik is distributed in the hope that it will be useful,
         but WITHOUT ANY WARRANTY; without even the implied warranty of
         MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
         GNU General Public License for more details.
