--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,26 +2,27 @@
 <!--
     * Copyright 2014 Red Dye No. 2
     *
-    * This file is part of Hash My pass.
+    * This file is part of Twik.
     *
-    * Hash my pass is free software: you can redistribute it and/or modify
+    * Twik is free software: you can redistribute it and/or modify
     * it under the terms of the GNU General Public License as published by
     * the Free Software Foundation, either version 3 of the License, or
     * (at your option) any later version.
     *
-    * Hash my pass is distributed in the hope that it will be useful,
+    * Twik is distributed in the hope that it will be useful,
     * but WITHOUT ANY WARRANTY; without even the implied warranty of
     * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
     * GNU General Public License for more details.
     *
     * You should have received a copy of the GNU General Public License
-    * along with Hash my pass.  If not, see <http://www.gnu.org/licenses/>.
+    * along with Twik.  If not, see <http://www.gnu.org/licenses/>.
     *
--->
+    -->
+
 <resources>
 
     <!-- Titles -->
-    <string name="app_name">Hash my pass</string>
+    <string name="app_name">Twik</string>
 
     <!-- Actions -->
     <string name="action_settings">Settings</string>
@@ -63,7 +64,7 @@
      \nNo passwords stored.</string>
     <string name="tutorial_intro_header">Safer passwords</string>
     <string name="tutorial_intro_content">To generate a password for a website
-        you have to enter your master key, that only you know. Hash my pass will
+        you have to enter your master key, that only you know. Twik will
         then generate a unique password for the site.</string>
     <string name="tutorial_setup_header">Almost there</string>
     <string name="tutorial_setup_content_1">You need a couple of
@@ -113,26 +114,26 @@
     <!-- About Dialog -->
     <string name="about_body">
 <![CDATA[
-        <b>Hash my pass</b><br/>
+        <b>Twik</b><br/>
         Version 1.2.0 beta1<br/>
         Copyright \u00A9 2014 Red Dye No. 2
         <br/><br/>
-        <b>Hash my pass</b> is an application that makes it easier to generate
+        <b>Twik</b> is an application that makes it easier to generate
         secure and different passwords for each website.
         <br/><br/>
-        Hash my pass is based on the password generation mechanism of Password
+        Twik is based on the password generation mechanism of Password
         Hasher by Steve Cooper and Password Hasher Plus by Eric Woodruff.
         <br/><br/>
-        Hash my pass is compatible with the Google Chrome Password Hasher Plus
+        Twik is compatible with the Google Chrome Password Hasher Plus
         extension by Eric Woodruff.
         <br/><br/>
 
         <b>License</b><br/>
-        Hash my pass is free software: you can redistribute it and/or modify
+        Twik is free software: you can redistribute it and/or modify
         it under the terms of the GNU General Public License as published by
         the Free Software Foundation, either version 3 of the License, or
         (at your option) any later version.<br/><br/>
-        Hash my pass is distributed in the hope that it will be useful,
+        Twik is distributed in the hope that it will be useful,
         but WITHOUT ANY WARRANTY; without even the implied warranty of
         MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
         GNU General Public License for more details.
