--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -59,6 +59,7 @@
     <string name="master_key">Contraseña maestra</string>
     <string name="tag">Sitio web</string>
     <string name="tag_settings">Ajustes del sitio web</string>
+    <string name="color">Color</string>
 
     <!-- Tutorial -->
     <string name="tutorial_splash_subtitle">Una contraseña diferente
@@ -116,7 +117,7 @@
     <!-- About Dialog -->
     <string name="about_body"><![CDATA[
         <b>Twik</b><br/>
-        Versión 1.2.0 beta1<br/>
+        Versión 1.2.1<br/>
         Copyright \u00A9 2014 Red Dye No. 2
         <br/><br/>
         <b>Twik</b> es una aplicación que hace más fácil generar
