--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -26,23 +26,23 @@
 
     <!-- Actions -->
     <string name="action_settings">Paramètres</string>
-    <string name="action_add_profile">Ajouter profil</string>
-    <string name="action_edit_profile">Editar profil</string>
+    <string name="action_add_profile">Ajouter un profil</string>
+    <string name="action_edit_profile">Éditer le profil</string>
     <string name="action_help">Aide</string>
-    <string name="action_about">A propos</string>
+    <string name="action_about">À propos</string>
     <string name="action_delete">Supprimer</string>
     <string name="discard">Annuler</string>
     <string name="ok">OK</string>
-    <string name="copy_to_clipboard">Copier au presse-papier</string>
+    <string name="copy_to_clipboard">Copier dans le presse-papier</string>
     <string name="cancel">Annuler</string>
     <string name="add">Ajouter</string>
     <string name="save">Enregistrer</string>
-    <string name="hash">Hash</string>
-    <string name="skip">Omettre tutoriel</string>
+    <string name="hash">Hasher</string>
+    <string name="skip">Passer le tutoriel</string>
     <string name="next">Suivant</string>
     <string name="start">Commencer</string>
-    <string name="ready">Je suis prêt pour commencer!</string>
-    <string name="add_first_profile">Ajoute ton premier profil</string>
+    <string name="ready">Je suis prêt à commencer!</string>
+    <string name="add_first_profile">Ajoutez votre premier profil</string>
     <string name="hash_this_tag">Générer mot de passe</string>
 
     <!-- Dialogs -->
@@ -62,65 +62,65 @@
     <string name="color">Couleur</string>
 
     <!-- Tutorial -->
-    <string name="tutorial_splash_subtitle">Un mot de passe différent 
-        pour chaque site.\nSans stocker des mot de passe.</string>
+    <string name="tutorial_splash_subtitle">Un mot de passe différent
+        pour chaque site.\nSans stocker de mots de passe.</string>
     <string name="tutorial_intro_header">Mots de passe plus sécurisés</string>
-    <string name="tutorial_intro_content">Lorsque tu veux générer un
-        mot de passe pour un site web tu devras introduire ta clé
-        principale, connue seulement par toi. Twik générera un
+    <string name="tutorial_intro_content">Pour générer un
+        mot de passe pour un site web vous devrez renseigner la clé
+        principale, connue de vous seul. Twik générera un
         mot de passe unique pour le site.</string>
     <string name="tutorial_setup_header">C'est presque fini</string>
-    <string name="tutorial_setup_content_1">T'auras besoin de quelques choses
+    <string name="tutorial_setup_content_1">Vous avez besoin de plusieurs choses
         avant de commencer:</string>
-    <string name="tutorial_setup_content_2"><ul><li>Une clé principale. Ne 
-        l'écris pas maintenant! Choisis une et en souviens-toi.</li></ul></string>
-    <string name="tutorial_setup_content_3"><ul><li>Una clé privée. Cette 
-        clé sera stockée sur ton appareil.</li></ul></string>
-    <string name="tutorial_setup_sample_master_key">p.ex. "chat machine à laver radio"</string>
-    <string name="tutorial_setup_sample_private_key">p.ex. "ASDF-QWER-DFGH"</string>
+    <string name="tutorial_setup_content_2"><ul><li>Une clé principale. Ne
+        l'écrivez pas maintenant! Choisissez en une et souvenez-vous en.</li></ul></string>
+    <string name="tutorial_setup_content_3"><ul><li>Une clé privée. Cette
+        clé sera stockée dans sur appareil.</li></ul></string>
+    <string name="tutorial_setup_sample_master_key">ex. "chat machine à laver radio"</string>
+    <string name="tutorial_setup_sample_private_key">ex. "ASDF-QWER-DFGH"</string>
 
     <!-- Notices -->
-    <string name="no_tags">Tu n'as pas de sites web!</string>
-    <string name="copied_to_clipboard">Mot de passe du site web copié au
+    <string name="no_tags">Vous n'avez pas de sites web!</string>
+    <string name="copied_to_clipboard">Mot de passe du site web copié dans le
      presse-papier</string>
 
     <!-- Settings titles -->
-    <string name="settings_title_remember_master_key">Se souvenir de la clé 
+    <string name="settings_title_remember_master_key">Se souvenir de la clé
         principale</string>
-    <string name="settings_title_copy_to_clipboard">Copier mot de passe au
-        presse-papier</string>
+    <string name="settings_title_copy_to_clipboard">Copier le mot de passe dans
+        le presse-papier</string>
 
     <!-- Settings summaries -->
     <string name="settings_summary_remember_master_key_never">
-        La clé principale sera oubliée quand tu quittes l'application 
+        La clé principale sera oubliée quand vous quitterez l'application
     </string>
     <string name="settings_summary_remember_master_key_minutes">
-        La clé principale ne sera pas oubliée pendant %d minutes après 
-        avoir quitté l'application        
+        La clé principale ne sera pas oubliée pendant %d minutes après
+        avoir quitté l'application
     </string>
     <string name="settings_summary_remember_master_key_hours">
-        La clé principale ne sera pas oubliée pendant %d heures après 
+        La clé principale ne sera pas oubliée pendant %d heures après
         avoir quitté l'application
     </string>
     <string name="settings_summary_copy_to_clipboard_enabled">Le mot de passe
-        généré sera copié automatiquement au presse-papier</string>
+        généré sera copié automatiquement dans le presse-papier</string>
     <string name="settings_summary_copy_to_clipboard_disabled">Le mot de passe
-	généré ne sera pas copié automatiquement au presse-papier</string>
+	généré ne sera pas copié automatiquement dans le presse-papier</string>
 
     <!-- Errors -->
     <string name="error">Ouille! Il y a eu une erreur!</string>
-    <string name="error_no_profiles">Oups! Tu devrais créer un profil 
+    <string name="error_no_profiles">Oups! Vous devriez créer un profil
         d'abord!</string>
-    <string name="error_tag_exists">Dis donc, tu as déjà ce site web!</string>
+    <string name="error_tag_exists">Hey, vous avez déjà ce site web!</string>
     <string name="error_profile_exists">Ce nom existe déjà</string>
 
     <!-- About Dialog -->
     <string name="about_body"><![CDATA[
         <b>Twik</b><br/>
-        Versión 1.2.3<br/>
+        Version 1.2.3<br/>
         Copyright \u00A9 2014 Red Dye No. 2
         <br/><br/>
-        <b>Twik</b> est une application qui fait plus facile la génération de
+        <b>Twik</b> est une application qui rend plus facile la génération de
         mots de passe sécurisés et différents pour chaque site web.
         <br/><br/>
 	Elle est basée sur le mécanisme de génération de mots de passe de Password
