Added acknowledgments for french translation

--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -130,6 +130,10 @@
         de Eric Woodruff.
         <br/><br/>
 
+        <b>Agradecimientos</b><br/>
+        Traducción al francés por Andrés Álvarez y greizgh
+        <br/><br/>
+
         <b>Licencia</b><br/>
         Twik is free software: you can redistribute it and/or modify
         it under the terms of the GNU General Public License as published by
