--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -129,6 +129,10 @@
         extension by Eric Woodruff.
         <br/><br/>
 
+        <b>Acknowledgements</b><br/>
+        French translation by Andrés Álvarez and greizgh
+        <br/><br/>
+
         <b>License</b><br/>
         Twik is free software: you can redistribute it and/or modify
         it under the terms of the GNU General Public License as published by
