--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -125,8 +125,8 @@
         Twik is based on the password generation mechanism of Password
         Hasher by Steve Cooper and Password Hasher Plus by Eric Woodruff.
         <br/><br/>
-        Twik is compatible with the Google Chrome Password Hasher Plus
-        extension by Eric Woodruff.
+        Twik is also available as a
+        <a href="https://chrome.google.com/webstore/detail/twik-password-generator/aabbbcmaljeehpfjoepomhbocldfkinc">Chrome Extension</a> in the Chrome Web Store.
         <br/><br/>
 
         <b>Acknowledgements</b><br/>
