--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -126,8 +126,8 @@
         Está basado en el mecanismo de generación de contraseñas de Password
         Hasher por Steve Cooper y Password Hasher Plus por Eric Woodruff.
         <br/><br/>
-        Es compatible con la extensión Password Hasher Plus para Google Chrome
-        de Eric Woodruff.
+        Twik también está disponible como una
+        <a href="https://chrome.google.com/webstore/detail/twik-password-generator/aabbbcmaljeehpfjoepomhbocldfkinc">extensión para Chrome</a> en la Chrome Web Store.
         <br/><br/>
 
         <b>Agradecimientos</b><br/>
