--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -117,7 +117,7 @@
     <!-- About Dialog -->
     <string name="about_body"><![CDATA[
         <b>Twik</b><br/>
-        Versión 1.2.3<br/>
+        Versión 1.2.4<br/>
         Copyright \u00A9 2014 Red Dye No. 2
         <br/><br/>
         <b>Twik</b> es una aplicación que hace más fácil generar
@@ -126,8 +126,12 @@
         Está basado en el mecanismo de generación de contraseñas de Password
         Hasher por Steve Cooper y Password Hasher Plus por Eric Woodruff.
         <br/><br/>
-        Es compatible con la extensión Password Hasher Plus para Google Chrome
-        de Eric Woodruff.
+        Twik también está disponible como una
+        <a href="https://chrome.google.com/webstore/detail/twik-password-generator/aabbbcmaljeehpfjoepomhbocldfkinc">extensión para Chrome</a> en la Chrome Web Store.
+        <br/><br/>
+
+        <b>Agradecimientos</b><br/>
+        Traducción al francés por Andrés Álvarez y greizgh
         <br/><br/>
 
         <b>Licencia</b><br/>
