Added hint for generating the first password

--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -80,7 +80,10 @@
     <string name="tutorial_setup_sample_private_key">p.ej. "ASDF-QWER-DFGH"</string>
 
     <!-- Notices -->
-    <string name="no_tags">¡No tienes sitios web!</string>
+    <string name="lets_start"><b>¡Comencemos!</b></string>
+    <string name="no_tags">Genera nuevas contraseñas pulsando el botón
+        o compartiendo el sitio web con <i>Twik</i> desde
+        tu navegador.</string>
     <string name="copied_to_clipboard">Contraseña del sitio web copiada al
         portapapeles</string>
 
