Fixed text overflow in German tutorial

--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -39,7 +39,7 @@
     <string name="add">Neu</string>
     <string name="save">Speichern</string>
     <string name="hash">Generieren</string>
-    <string name="skip">Tutorial überspringen</string>
+    <string name="skip">Überspringen</string>
     <string name="next">Weiter</string>
     <string name="start">Los</string>
     <string name="ready">Alles klar</string>
