Added acknowledgments for German translation in all languages

--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -134,7 +134,8 @@
         <br/><br/>
 
         <b>Agradecimientos</b><br/>
-        Traducción al francés por Andrés Álvarez y greizgh
+        Traducción al francés por Andrés Álvarez y greizgh<br/>
+        Traducción al alemán por Michael Wodniok (alias murderered)
         <br/><br/>
 
         <b>Licencia</b><br/>
