--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -133,7 +133,8 @@
         <br/><br/>
 
         <b>Acknowledgements</b><br/>
-        French translation by Andrés Álvarez and greizgh
+        French translation by Andrés Álvarez and greizgh<br/>
+        German translation by Michael Wodniok (alias murderered)
         <br/><br/>
 
         <b>License</b><br/>
