--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -120,7 +120,7 @@
     <!-- About Dialog -->
     <string name="about_body"><![CDATA[
         <b>Twik</b><br/>
-        Versión 1.2.5<br/>
+        Versión 1.2.6<br/>
         Copyright \u00A9 2014 Red Dye No. 2
         <br/><br/>
         <b>Twik</b> es una aplicación que hace más fácil generar
@@ -134,7 +134,8 @@
         <br/><br/>
 
         <b>Agradecimientos</b><br/>
-        Traducción al francés por Andrés Álvarez y greizgh
+        Traducción al francés por Andrés Álvarez y greizgh<br/>
+        Traducción al alemán por Michael Wodniok (alias murderered)
         <br/><br/>
 
         <b>Licencia</b><br/>
