--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -120,7 +120,7 @@
     <!-- About Dialog -->
     <string name="about_body"><![CDATA[
         <b>Twik</b><br/>
-        Version 1.2.5<br/>
+        Version 1.2.6<br/>
         Copyright \u00A9 2014 Red Dye No. 2
         <br/><br/>
         <b>Twik</b> est une application qui rend plus facile la génération de
@@ -134,7 +134,8 @@
         <br/><br/>
 
         <b>Acknowledgements</b><br/>
-        French translation by Andrés Álvarez and greizgh
+        French translation by Andrés Álvarez and greizgh<br/>
+        German translation by Michael Wodniok (alias murderered)
         <br/><br/>
 
         <b>License</b><br/>
