--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -119,7 +119,7 @@
     <string name="about_body">
 <![CDATA[
         <b>Twik</b><br/>
-        Version 1.2.4<br/>
+        Version 1.2.6<br/>
         Copyright \u00A9 2014 Red Dye No. 2
         <br/><br/>
         <b>Twik</b> is an application that makes it easier to generate
@@ -133,7 +133,8 @@
         <br/><br/>
 
         <b>Acknowledgements</b><br/>
-        French translation by Andrés Álvarez and greizgh
+        French translation by Andrés Álvarez and greizgh<br/>
+        German translation by Michael Wodniok (alias murderered)
         <br/><br/>
 
         <b>License</b><br/>
