Accesibility: Added missing contentDescription

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -59,6 +59,8 @@
     <string name="tag">Website</string>
     <string name="tag_settings">Website settings</string>
     <string name="color">Color</string>
+    <string name="logo">Logo</string>
+    <string name="identicon">Identicon</string>
 
     <!-- Tutorial -->
     <string name="tutorial_splash_subtitle">A different password for each site.
