--- a/app/src/main/res/values-it/strings.xml
+++ b/app/src/main/res/values-it/strings.xml
@@ -92,13 +92,17 @@
     <string name="settings_summary_remember_master_key_never">La chiave
         princiaple non verrà ricordata dopo la chiusura
         dell\'applicazione</string>
-    <string name="settings_summary_remember_master_key_minutes">La chiave
-        principale verrà ricordata per %d minuti dopo la chiusura
-        dell\'applicazione</string>
-    <string name="settings_summary_remember_master_key_hours"> La chiave
-        principale verrà ricordata %d ore dopo la chiusura
-        dell\'applicazione</string>
-    <string name="settings_summary_copy_to_clipboard_enabled">La password con 
+    <plurals name="settings_summary_remember_master_key_minutes">
+        <item quantity="one">La chiave principale verrà ricordata per %d minuto dopo la chiusura
+            dell\'applicazione</item>
+        <item quantity="other">La chiave principale verrà ricordata per %d minuti dopo la chiusura
+            dell\'applicazione</item>
+    </plurals>
+    <plurals name="settings_summary_remember_master_key_hours">
+        <item quantity="one">La chiave principale verrà ricordata %d ora dopo la chiusura</item>
+        <item quantity="other">La chiave principale verrà ricordata %d ore dopo la chiusura</item>
+    </plurals>
+    <string name="settings_summary_copy_to_clipboard_enabled">La password con
         valori hash viene automaticamente copiata negli appunti</string>
     <string name="settings_summary_copy_to_clipboard_disabled">La password con
         valori di hash non viene automaticamente copiata negli appunti</string>
