--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -133,6 +133,7 @@
 
         <b>Agradecimientos</b><br/>
         Traducción al francés por Andrés Álvarez y greizgh<br/>
+        Traducción al italiano por Claudio Arseni<br/>
         Traducción al alemán por Michael Wodniok (alias murderered)
         <br/><br/>
 
