--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -130,6 +130,7 @@
 
         <b>Acknowledgements</b><br/>
         French translation by Andrés Álvarez and greizgh<br/>
+        Italian translation by Claudio Arseni<br/>
         German translation by Michael Wodniok (alias murderered)
         <br/><br/>
 
