--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -99,7 +99,7 @@
     <!-- About Dialog -->
     <string name="about_body">
 <![CDATA[
-        Version 1.3.0<br/>
+        Version %s<br/>
         Copyright \u00A9 2014 Red Dye No. 2
         <br/><br/>
         <b>Twik</b> ist eine Applikation, die es einfacher macht, sichere und unterschiedliche Passwörter für verschiedene Webseiten zu erzeugen.
