--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -115,7 +115,7 @@
 
     <!-- About Dialog -->
     <string name="about_body"><![CDATA[
-        Version 1.3.0<br/>
+        Version %s<br/>
         Copyright \u00A9 2014 Red Dye No. 2
         <br/><br/>
         <b>Twik</b> est une application qui rend plus facile la génération de
