--- a/app/src/main/res/values-it/strings.xml
+++ b/app/src/main/res/values-it/strings.xml
@@ -117,7 +117,7 @@
     <!-- About Dialog -->
     <string name="about_body">
 <![CDATA[
-        Versione 1.3.0<br/>
+        Versione %s<br/>
         Copyright \u00A9 2014 Red Dye No. 2
         <br/><br/>
         <b>Twik</b> è una applicazione che rende semplice generare
