--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -33,8 +33,7 @@
     <string name="action_delete">Supprimer</string>
     <string name="discard">Annuler</string>
     <string name="save">Enregistrer</string>
-    <string name="skip">Passer le tutoriel</string>
-    <string name="next">Suivant</string>
+    <string name="skip">Passer</string>
     <string name="start">Commencer</string>
 
     <!-- Dialogs -->
